--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
           <!-- Carousel Component -->
           <div class="row">
             <div class="columns">
-              <div class="orbit" role="region" aria-data-label="Favorite Space Pictures" data-orbit>
+              <div class="orbit" role="region" aria-label="Favorite Space Pictures" data-orbit>
                 <ul class="orbit-container">
                   <button class="orbit-previous"><span class="show-for-sr">Previous Slide</span>&#9664;&#xFE0E;</button>
                   <button class="orbit-next"><span class="show-for-sr">Next Slide</span>&#9654;&#xFE0E;</button>
