--- a/index.html
+++ b/index.html
@@ -143,10 +143,11 @@
           </div>
 
           <!-- Vertical Menu Component -->
-            <div class="history menu" id="history">
-              <h5>Search History: </h5>
-            </div>
-
+          <div>
+            <h5>Search History: </h5>
+              <div class="history menu" id="history">
+              </div>
+          </div>
         </div>
 
         <!-- Right Pane Container -->
